[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/space_background.jpg" type="Texture" id=1]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/enemies/cruiser/cruiser.tscn" type="PackedScene" id=3]
[ext_resource path="res://camera/camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/level.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/asteroids.png" type="Texture" id=6]
[ext_resource path="res://entities/enemies/stalker/stalker.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/low_health.ogg" type="AudioStream" id=8]
[ext_resource path="res://levels/astar_navigation.gd" type="Script" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 96, 8, 120, 32, 128, 56, 128, 72, 120, 96, 96, 120, 72, 128, 56, 128, 32, 120, 8, 96, 0, 72, 0, 56, 8, 32, 32, 8, 56, 0, 72, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 96, 8, 120, 32, 128, 56, 128, 72, 120, 96, 96, 120, 72, 128, 56, 128, 32, 120, 8, 96, 0, 72, 0, 56, 8, 32, 32, 8, 56, 0, 72, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 96, 8, 120, 32, 128, 56, 128, 72, 120, 96, 96, 120, 72, 128, 56, 128, 32, 120, 8, 96, 0, 72, 0, 56, 8, 32, 32, 8, 56, 0, 72, 0 )

[sub_resource type="TileSet" id=4]
0/name = "asteroids.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "asteroids.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "asteroids.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform bool activate_grayscale;

void fragment() 
{
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
	
	if (activate_grayscale) 
	{
		float avg = (COLOR.r + COLOR.g + COLOR.b) / 3.0;
		COLOR.rgb = vec3(avg);
	}
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/activate_grayscale = null

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="BackgroundSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2048, 2048 )

[node name="ObstacleTileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 128, 128 )
cell_tile_origin = 1
collision_layer = 16
collision_mask = 15
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 2, 0, 2, 0, 0, 3, 1, 0, 4, 2, 0, 5, 1, 0, 6, 0, 0, 7, 2, 0, 8, 1, 0, 9, 2, 0, 10, 1, 0, 11, 2, 0, 12, 0, 0, 13, 2, 0, 14, 1, 0, 15, 0, 0, 65536, 1, 0, 65551, 2, 0, 131072, 2, 0, 131087, 1, 0, 196608, 0, 0, 196623, 0, 0, 262144, 1, 0, 262150, 0, 0, 262151, 0, 0, 262159, 2, 0, 327680, 2, 0, 327686, 0, 0, 327687, 0, 0, 327695, 1, 0, 393216, 1, 0, 393231, 2, 0, 458752, 0, 0, 458767, 1, 0, 524288, 2, 0, 524303, 0, 0, 589824, 1, 0, 589839, 1, 0, 655360, 2, 0, 655375, 2, 0, 720896, 0, 0, 720911, 1, 0, 786432, 1, 0, 786447, 0, 0, 851968, 0, 0, 851983, 2, 0, 917504, 1, 0, 917519, 1, 0, 983040, 2, 0, 983041, 0, 0, 983042, 2, 0, 983043, 1, 0, 983044, 0, 0, 983045, 1, 0, 983046, 2, 0, 983047, 1, 0, 983048, 0, 0, 983049, 2, 0, 983050, 1, 0, 983051, 0, 0, 983052, 2, 0, 983053, 1, 0, 983054, 0, 0, 983055, 2, 0 )
script = ExtResource( 9 )
map_size = Vector2( 16, 16 )

[node name="Camera" parent="." instance=ExtResource( 4 )]
position = Vector2( 942.381, 1035.32 )

[node name="LowHealthAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 942.381, 1035.32 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera")
__meta__ = {
"_edit_lock_": true
}

[node name="Enemies" type="Node2D" parent="."]

[node name="Cruiser" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 724.762, 312.583 )
damage = 1
friction = 0.65
trauma = 0.1
fire_rate = 0.5

[node name="Cruiser2" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 1677.41, 213.276 )
damage = 1
friction = 0.65
trauma = 0.1
fire_rate = 0.5

[node name="Cruiser3" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 1322.25, 1633.8 )
damage = 1
friction = 0.65
trauma = 0.1
fire_rate = 0.5

[node name="Cruiser4" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 207, 1616 )
damage = 1
friction = 0.65
trauma = 0.1
fire_rate = 0.5

[node name="Stalker" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 259, 836 )
health = 3
damage = 1
turn_speed = 0.1
friction = 0.65
trauma = 0.1
fire_rate = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GrayScale" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 1448.0
rect_min_size = Vector2( 2048, 2048 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="health_regained" from="Player" to="." method="_on_Player_health_regained"]
[connection signal="is_hit" from="Player" to="." method="_on_Player_is_hit"]
